@@ -5,12 +5,13 @@ SH_LOG_COMPILER = $(SHELL)
 
 # Put new, init.sh-using tests here, so that each name
 # is listed in only one place.
-T =			\
-  follow-symlinks-stdin.sh \
-  help-version.sh	\
-  in-place-hyphen.sh	\
-  invalid-mb-seq-UMR.sh	\
-  range-overlap.sh	\
+T =				\
+  colon-with-no-label.sh	\
+  follow-symlinks-stdin.sh	\
+  help-version.sh		\
+  in-place-hyphen.sh		\
+  invalid-mb-seq-UMR.sh		\
+  range-overlap.sh		\
   temp-file-cleanup.sh
 
 TESTS = $(check_PROGRAMS) $(SEDTESTS) $(T)
