@@ -4,6 +4,11 @@ GNU sed NEWS                                    -*- outline -*-
 
 ** Bug fixes
 
+  sed no longer accepts a ":" command without a label; before, it would
+  treat that as defining a label whose name is empty, and subsequent
+  label-free "t" and "b" commands would use that label. Now, sed emits
+  a diagnostic and fails for that invalid construct.
+
   sed no longer accesses uninitialized memory when processing certain
   invalid multibyte sequences. Demonstrate with this:
     echo a | LC_ALL=ja_JP.eucJP valgrind sed/sed 's/a/b\U\xb2c/'
